// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Session Recording Consumer Integration end-to-end message processing invalid team token 1`] = `
{
  "outcome": "dropped",
  "sessionCount": 0,
  "sessions": [],
}
`;

exports[`Session Recording Consumer Integration end-to-end message processing multiple sessions in same batch 1`] = `
{
  "outcome": "written",
  "sessionCount": 2,
  "sessions": [
    {
      "blockUrlCount": 1,
      "clickCount": 0,
      "consoleErrorCount": 0,
      "consoleLogCount": 0,
      "consoleWarnCount": 0,
      "eventCount": 2,
      "events": [
        {
          "hasData": true,
          "hasTimestamp": true,
          "type": 4,
          "windowId": "window-1",
        },
        {
          "hasData": true,
          "hasTimestamp": true,
          "type": 2,
          "windowId": "window-1",
        },
      ],
      "hasDistinctId": true,
      "hasFirstUrl": true,
      "hasSessionId": true,
      "keypressCount": 0,
      "mouseActivityCount": 0,
      "urlCount": 1,
      "windowIds": [
        "window-1",
      ],
    },
    {
      "blockUrlCount": 1,
      "clickCount": 0,
      "consoleErrorCount": 0,
      "consoleLogCount": 0,
      "consoleWarnCount": 0,
      "eventCount": 2,
      "events": [
        {
          "hasData": true,
          "hasTimestamp": true,
          "type": 4,
          "windowId": "window-1",
        },
        {
          "hasData": true,
          "hasTimestamp": true,
          "type": 2,
          "windowId": "window-1",
        },
      ],
      "hasDistinctId": true,
      "hasFirstUrl": true,
      "hasSessionId": true,
      "keypressCount": 0,
      "mouseActivityCount": 0,
      "urlCount": 1,
      "windowIds": [
        "window-1",
      ],
    },
  ],
}
`;

exports[`Session Recording Consumer Integration end-to-end message processing multiple windows in same session 1`] = `
{
  "outcome": "written",
  "sessionCount": 1,
  "sessions": [
    {
      "blockUrlCount": 1,
      "clickCount": 0,
      "consoleErrorCount": 0,
      "consoleLogCount": 0,
      "consoleWarnCount": 0,
      "eventCount": 2,
      "events": [
        {
          "hasData": true,
          "hasTimestamp": true,
          "type": 4,
          "windowId": "window-main",
        },
        {
          "hasData": true,
          "hasTimestamp": true,
          "type": 4,
          "windowId": "window-popup",
        },
      ],
      "hasDistinctId": true,
      "hasFirstUrl": true,
      "hasSessionId": true,
      "keypressCount": 0,
      "mouseActivityCount": 0,
      "urlCount": 2,
      "windowIds": [
        "window-main",
        "window-popup",
      ],
    },
  ],
}
`;

exports[`Session Recording Consumer Integration end-to-end message processing single session with multiple event types 1`] = `
{
  "outcome": "written",
  "sessionCount": 1,
  "sessions": [
    {
      "blockUrlCount": 1,
      "clickCount": 0,
      "consoleErrorCount": 0,
      "consoleLogCount": 0,
      "consoleWarnCount": 0,
      "eventCount": 3,
      "events": [
        {
          "hasData": true,
          "hasTimestamp": true,
          "type": 4,
          "windowId": "window-1",
        },
        {
          "hasData": true,
          "hasTimestamp": true,
          "type": 2,
          "windowId": "window-1",
        },
        {
          "hasData": true,
          "hasTimestamp": true,
          "type": 3,
          "windowId": "window-1",
        },
      ],
      "hasDistinctId": true,
      "hasFirstUrl": true,
      "hasSessionId": true,
      "keypressCount": 0,
      "mouseActivityCount": 1,
      "urlCount": 1,
      "windowIds": [
        "window-1",
      ],
    },
  ],
}
`;
